Add links to new simulations

--- a/index.html
+++ b/index.html
@@ -80,6 +80,14 @@
       <p class="subtitle">Colección de simulaciones standalone (HTML/JS/CSS)</p>
 
       <section class="grid" aria-label="Simulaciones disponibles">
+        <a class="card" href="animal_groups_lab_v2_1.html">
+          <h2>Animal Groups Lab v2.1</h2>
+          <span>Laboratorio virtual</span>
+        </a>
+        <a class="card" href="sim.html">
+          <h2>Simulador de Clase</h2>
+          <span>Modelo de sesión</span>
+        </a>
         <a class="card" href="sims/flocking/">
           <h2>Flocking + Sync</h2>
           <span>Ver simulación</span>
