--- a/index.html
+++ b/index.html
@@ -52,6 +52,15 @@
         margin: 0 0 8px;
         font-size: 1.3rem;
       }
+      .card p {
+        margin: 0 0 12px;
+        color: #5a5a5a;
+        font-size: 0.95rem;
+      }
+      .card.featured {
+        border: 2px solid rgba(10, 102, 194, 0.25);
+        background: linear-gradient(135deg, rgba(10, 102, 194, 0.08), #ffffff);
+      }
       .card span {
         color: #0a66c2;
         font-weight: 600;
@@ -68,6 +77,13 @@
           background: #1b1d21;
           box-shadow: 0 8px 20px rgba(0, 0, 0, 0.35);
         }
+        .card p {
+          color: #b2b7bf;
+        }
+        .card.featured {
+          border: 2px solid rgba(122, 182, 255, 0.35);
+          background: linear-gradient(135deg, rgba(122, 182, 255, 0.12), #1b1d21);
+        }
         .card span {
           color: #7ab6ff;
         }
@@ -80,12 +96,14 @@
       <p class="subtitle">Colección de simulaciones standalone (HTML/JS/CSS)</p>
 
       <section class="grid" aria-label="Simulaciones disponibles">
-        <a class="card" href="animal_groups_lab_v2_1.html">
+        <a class="card featured" href="animal_groups_lab_v2_1.html">
           <h2>Animal Groups Lab v2.1</h2>
+          <p>Laboratorio virtual con métricas en vivo, cuaderno y A/B.</p>
           <span>Laboratorio virtual</span>
         </a>
         <a class="card" href="sim.html">
           <h2>Simulador de Clase</h2>
+          <p>Modelo de sesión docente con decisiones y KPIs.</p>
           <span>Modelo de sesión</span>
         </a>
         <a class="card" href="sims/flocking/">
